--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,6 +24,16 @@ jobs:
     - name: Test
       run: ./gradlew test
 
+    - name: Build bootstrap compiler
+      run: ./gradlew installDist
+
+    - name: Install LLVM
+      run: sudo apt install -y llvm-13-dev
+
+    - name: Test Stage 1
+      run: python3 test.py
+      working-directory: ./hades
+
     - name: Archive Test Results
       if: always() # Even on failures
       uses: actions/upload-artifact@v1
